--- a/plugins/config.pri.in
+++ b/plugins/config.pri.in
@@ -1,6 +1,6 @@
-CONFIG += debug
-CONFIG += 
-CONFIG += 
+CONFIG += @PL_DEBUG@
+CONFIG += @PL_DMEM_COMPILE@
+CONFIG += @PL_TA_NO_GUI@
 
 # the tacss/pdp version string, for adding to libs and folder (Unix only)
 # the pdp system folder (Unix); (just the app folder on Win)
@@ -9,10 +9,10 @@ win32 {
   SYS_PLUGIN_DIR = $$(PDP4DIR)/plugins
   CONFIG_PRI = $$(PDP4DIR)/plugins/config.pri
 } else {
-  LIB_VER = 4.0.2b1
+  LIB_VER = @PL_LIB_VER@
   #note: following should have been sub'ed by DATADIR but we couldn't
   # find a way to get that to resolve at configure time
-  SYS_PLUGIN_DIR = /usr/local/share/pdp++-4.0.2b1/plugins
-  CONFIG_PRI = /home/baisa/pdp4.0/plugins/config.pri
+  SYS_PLUGIN_DIR = /usr/local/share/pdp++-@PL_LIB_VER@/plugins
+  CONFIG_PRI = @abs_srcdir@/config.pri
 }
 
