--- a/src/bp/Makefile.in
+++ b/src/bp/Makefile.in
@@ -177,6 +177,10 @@ PDP_SUFFIX = @PDP_SUFFIX@
 PLATFORM_SUFFIX = @PLATFORM_SUFFIX@
 PLUGINS_FALSE = @PLUGINS_FALSE@
 PLUGINS_TRUE = @PLUGINS_TRUE@
+PL_DEBUG = @PL_DEBUG@
+PL_DMEM_COMPILE = @PL_DMEM_COMPILE@
+PL_LIB_VER = @PL_LIB_VER@
+PL_TA_NO_GUI = @PL_TA_NO_GUI@
 POW_LIB = @POW_LIB@
 PROFILE_FALSE = @PROFILE_FALSE@
 PROFILE_TRUE = @PROFILE_TRUE@
