--- a/plugins/config.pri.in
+++ b/plugins/config.pri.in
@@ -1,18 +1,61 @@
-CONFIG += @PL_DEBUG@
-CONFIG += @PL_DMEM_COMPILE@
-CONFIG += @PL_TA_NO_GUI@
+# see Unix section for documentation of switches
+# this file is copied directly to .pri on Windows
 
-# the tacss/pdp version string, for adding to libs and folder (Unix only)
-# the pdp system folder (Unix); (just the app folder on Win)
+# on Unix, if empty, then inc/lib etc. paths are from install
+PDP4_DIR = $$(PDP4DIR)
+
 win32 {
+#TODO: need to pass in the msvc target, ex Debug or Release (for pathing)
+#MSVC_TARGET = Debug
+
+contains( MSVC_TARGET, Debug ) {
+  CONFIG += debug
+} contains( MSVC_TARGET, Release )
+} else {
+  error("MSVC_TARGET variable must be defined as either Debug or Release")
+}
+  
   LIB_VER = 
   SYS_PLUGIN_DIR = $$(PDP4DIR)/plugins
   CONFIG_PRI = $$(PDP4DIR)/plugins/config.pri
+  PDP_SYS_DIR = $$(PDP4DIR)
+  
 } else {
+
+
+# needed to resolve autools paths
+  prefix = @PL_prefix@
+# this will be the prefix path of pdp system directory, if installed
+  datadir = @PL_datadir@
+  includedir = @PL_includedir@
+    
+  CONFIG += @PL_DEBUG@
+  CONFIG += @PL_DMEM_COMPILE@
+  CONFIG += @PL_TA_NO_GUI@
+
+  LIBS += @PL_LIBS@
+
+# the tacss/pdp version string, for adding to libs and folder (Unix only)
   LIB_VER = @PL_LIB_VER@
-  #note: following should have been sub'ed by DATADIR but we couldn't
-  # find a way to get that to resolve at configure time
-  SYS_PLUGIN_DIR = /usr/local/share/pdp++-@PL_LIB_VER@/plugins
+
+# where the pdp src has been unpacked
+#  PDP_BUILD_DIR = @PL_abs_top_builddir@
+#TODO: if PDP4DIR exists, then we want to replace PDP_BUILD_DIR with it
+# the pdp system folder (Unix); (just the app folder on Win)
+  PDP_SYS_DIR = ${datadir}/pdp++-@PL_LIB_VER@
+# the installed headers folder
+  
+# the install target for plugins
+  SYS_PLUGIN_DIR = ${datadir}/pdp++-@PL_LIB_VER@/plugins
   CONFIG_PRI = @abs_srcdir@/config.pri
+  
+  # now, the modal paths that depend on whether PDP4DIR is defined or not
+  isEmpty( PDP4_DIR ) {
+    PDP_INC_DIR = ${includedir}/pdp++-@PL_LIB_VER@
+  } else {
+    PDP_INC_DIR = ${PDP4_DIR}/src
+    LIBS += -L$(PDP4_DIR)/src/ta_lib/.libs
+    LIBS += -L$(PDP4_DIR)/src/pdp_lib/.libs
+  }
 }
 
